# hijinks

./: .gitmodules  .travis.yml  README.md  __init__.py  __metadata__.py  instrumentation.py  pyproject.toml  rs1.py  setup.py  tags.py
.github/workflows/: main.yml
etc/py/: make_red_shift_0.py
exergue/py/: make-red-shift-back-cover.py
exg/py/: make-red-shift-back-cover.py
hijinks/: ScoreTemplate.py  __init__.py  __metadata__  __metadata__.py  library.py  stylesheet.ily  tools.py
hijinks/builds/_segments/: -.ly  segment-01.ly
hijinks/builds/arch-a-score/: .01.ily.tags  .tags  __metadata__  __metadata__.py  back-cover.tex  layout.ily  (+5 more)
hijinks/etc/: make_hijinks_0.py  make_hijinks_1.py  make_hijinks_back_cover.py  scratch.txt
hijinks/materials/: __init__.py
hijinks/sections/: stylesheet.ily
hijinks/stylesheets/: context-definitions.ily  contexts.ily  default-instrument-names.ily  markups.ily  stylesheet.ily
hijinks/test/: test_hijinks_import.py  test_red_shift_import.py
hijinks/tools/: ScoreTemplate.py  SegmentMaker.py  __init__.py  final_markup.py  make_final_markup.py  make_hijinks.py  margin_markup.py  piano_rhythm.py  split_pitches.py  violin_rhythm.py
mus/py/: make_red_shift_0.py  make_red_shift_1.py  make_red_shift_2.py
music/py/: make_red_shift_2.py
py/: make_red_shift_0.py
score/tex/: hijinks-back-cover.tex
scr/indd/: red-shift-score-front-cover.indd
scr/py/: make-red-shift-back-cover.py
scr/tex/: red-shift-back-cover.tex
source/hijinks/: library.py  stylesheet.ily
test/: test_red_shift_import.py
txt/: red_shift_scratch.txt
(+94 files in other folders)
