[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hijinks"
version = "3.28"
description = "Red Shift Hijinks (2006) for violin & piano"
authors = [{ name = "Trevor BaÄa", email = "trevor.baca@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
keywords = ["abjad", "lilypond", "music composition", "music notation"]
dependencies = ["abjad>=3.28"]

[project.urls]
Homepage = "https://github.com/trevorbaca/hijinks"

[tool.setuptools]
packages = ["hijinks"]
package-dir = { "" = "source" }
